--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for([category, expense]) do |f| %>
-
+	<% if expense.id.present? %>
+		<% category.id = expense.id %>
+	<% end %>
 	<div class="modal fade" id="<%=category.id%>Modal" tabindex="-1" role="dialog" aria-labelledby="<%=category.id%>ModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
